--- a/customer_segments_PT.ipynb
+++ b/customer_segments_PT.ipynb
@@ -2133,7 +2133,9 @@
    "metadata": {},
    "source": [
     "**Resposta:**\n",
-    "\n"
+    "\n",
+    "O Segmento 0 tem gastos semelhantes em Milk, Grocery e Frozen, com um maior gasto em Fresh, pouco gasto em Detergents_Paper. Creio que essa primeira segmentação de clientes sejam pequenos comércios como Fruteiras, Padarias, pequenas Lancherias e Sorveterias. \n",
+    "O Segmento 1 já possui um perfil de compra bem diferenciado, as quantidades são bem maiores que as do Segmento 0 em 3 categorias. Isso pode caracterizar como pequenos mercados ou mercearías, como também grandes redes de Fast Food e Restaurantes.\n"
    ]
   },
   {
@@ -2172,7 +2174,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resposta:**"
+    "**Resposta:**\n",
+    "\n"
    ]
   },
   {
