Versão final para avaliação

--- a/customer_segments_PT.ipynb
+++ b/customer_segments_PT.ipynb
@@ -469,7 +469,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f12ecb89ed0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f337da2ffd0>"
       ]
      },
      "execution_count": 6,
@@ -1797,7 +1797,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f12ef6d0550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f337e22c750>"
       ]
      },
      "execution_count": 14,
@@ -2232,7 +2232,8 @@
    "source": [
     "**Resposta:**\n",
     "\n",
-    "Poderíamos, seguindo a estratégia de considerar dois grupos de clientes: varejistas e comércios maiores(como restaurantes) e clientes menores(Ex:padarias e fruteiras de bairros), poderíamos classificar os clientes entre grandes consumidores e pequenos consumidores."
+    "Poderíamos, seguindo a estratégia de considerar dois grupos de clientes: varejistas e comércios maiores(como restaurantes) e clientes menores(Ex:padarias e fruteiras de bairros), classificar os clientes entre grandes consumidores e pequenos consumidores.\n",
+    "Com uma atributo classificando os clientes como de grande porte ou de pequeno porte poderíamos utilizar uma aprendizagem supervizinada, mas com os atributos atuais não vejo como usar somente algum dentre eles como alvo."
    ]
   },
   {
@@ -2285,7 +2286,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resposta:**"
+    "**Resposta:**\n",
+    "\n",
+    "O algoritmo de clustering utilizado(GMM) apresentou um excelente resultado quando comparamos com a distribuição acima. Podemos ver que ele conseguiu dividir os clusters na mesma região que vemos acima. Nota-se que os dados apresentam alguns valores mais descentralizados e que o GMM não conseguiu identificar, mas creio que em uma análise mais geral o mesmo se saiu muito bem. \n",
+    "Os segmentos, como já discutido nas questões anteriores, se apresentam em dois grupos: clientes maiores e menores, mas creio que essa definição de *varejistas* e *Hotéis/cafés/restaurantes* seria bem consistente, na realidade seria uma classificação mais precisa, visto que somente classificar clientes em *grandes* e *menores* não refletem bem as segmentações dos mesmos."
    ]
   },
   {
